# server/public/openApi.json
@@ -10591,9 +10591,18 @@
             "description": "封面图片来源类型：upload上传 link链接",
             "default": "upload"
           },
+          "contentType": {
+            "type": "string",
+            "description": "内容类型：editor编辑器 link外部链接",
+            "default": "editor"
+          },
           "content": {
             "type": "string",
             "description": "文章内容"
+          },
+          "externalLink": {
+            "type": "string",
+            "description": "外部链接"
           },
           "source": {
             "type": "string",
@@ -10669,9 +10678,18 @@
             "description": "封面图片来源类型：upload上传 link链接",
             "default": "upload"
           },
+          "contentType": {
+            "type": "string",
+            "description": "内容类型：editor编辑器 link外部链接",
+            "default": "editor"
+          },
           "content": {
             "type": "string",
             "description": "文章内容"
+          },
+          "externalLink": {
+            "type": "string",
+            "description": "外部链接"
           },
           "source": {
             "type": "string",
